<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="10dp"
    android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_nombre_completo"/>
        <EditText
            android:id="@+id/nombre_completo"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_fecha"/>
        <EditText
            android:id="@+id/picker_fecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:focusable="false"
            android:clickable="true"
            tools:layout_editor_absoluteX="77dp"
            tools:layout_editor_absoluteY="229dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_telefono"/>
        <EditText
            android:id="@+id/telefono"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_email"/>
        <EditText
            android:id="@+id/email"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_descripcion"/>
        <EditText
            android:id="@+id/descripcion_contacto"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"/>

        <Button
            android:id="@+id/boton_siguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/btn_siguiente"
            tools:layout_editor_absoluteX="202dp"
            tools:layout_editor_absoluteY="580dp" />

</LinearLayout>

